--- a/Watch-collection/css/style.css
+++ b/Watch-collection/css/style.css
@@ -1,201 +1,218 @@
-@font-face {
-  font-family: "SF Pro Display";
-  font-style: normal;
-  font-weight: 100;
-  src: local("☺︎"),
-    url("http://www.apple.com/wss/fonts/SF-Pro-Display/v1/sf-pro-display_ultralight.woff")
-      format("woff"),
-    url("http://www.apple.com/wss/fonts/SF-Pro-Display/v1/sf-pro-display_ultralight.ttf")
-      format("truetype");
-  /* (C) 2015 Apple Inc. All rights reserved.*/
-}
 p,
 a {
-  font-size: 14px;
+    font-size: 14px;
 }
 .btn-gradient {
-  position: relative;
+    position: relative;
 }
 .btn-gradient::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-radius: 20px;
-  padding: 2px;
-  background: linear-gradient(45deg, #008000, #ff0000, #0000ff);
-  -webkit-mask: linear-gradient(#ffffff 0 0) content-box,
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 20px;
+    padding: 2px;
+    background: linear-gradient(45deg, #008000, #ff0000, #0000ff);
+    -webkit-mask: linear-gradient(#ffffff 0 0) content-box,
     linear-gradient(#ffffff 0 0);
-  -webkit-mask-composite: destination-out;
-  mask-composite: exclude;
+    -webkit-mask-composite: destination-out;
+    mask-composite: exclude;
 }
 .btn-gradient:hover::before {
-  padding: 3px;
+    padding: 3px;
 }
 .nav-wrapper {
-  background-color: #000000;
+    background-color: #000000;
 }
 .navbar-toggler:focus {
-  box-shadow: none;
+    box-shadow: none;
 }
 .secoldary-menu-wrapper {
-  background: rgba(245, 245, 247, 0.6);
+    background: rgba(245, 245, 247, 0.6);
 }
 .secoldary-menu-item img {
-  width: 100%;
-  height: 54px;
+    width: 100%;
+    height: 54px;
 }
 .secoldary-menu-item a {
-  font-size: 11px;
-  white-space: normal;
-  max-width: 7em;
-  line-height: 1.2;
-  text-decoration: none;
-  color: #000000;
+    font-size: 11px;
+    white-space: normal;
+    max-width: 7em;
+    line-height: 1.2;
+    text-decoration: none;
+    color: #000000;
 }
 .secoldary-menu-section .slick-slide {
-  margin: 0 15px;
+    margin: 0 15px;
 }
 .feedback {
-  width: 100px;
-  position: fixed;
-  top: 50%;
-  right: -35px;
-  z-index: 1;
-  transform: rotate(90deg);
-  background: #ffff00;
-  padding: 5px;
+    width: 100px;
+    position: fixed;
+    top: 50%;
+    right: -35px;
+    z-index: 1;
+    transform: rotate(90deg);
+    background: #ffff00;
+    padding: 5px;
 }
 .feedback p {
-  margin-bottom: 1px;
+    margin-bottom: 1px;
 }
 .feedback a {
-  text-decoration: none;
-  color: #000000;
+    text-decoration: none;
+    color: #000000;
 }
 .banner {
-  height: 100vh;
-  background-image: url("../img/section-1.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+    height: 100vh;
+    background-image: url("../img/section-1.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 .banner div {
-  width: 350px;
-  position: absolute;
-  top: 50%;
-  left: 17%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 17%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 .banner p {
-  font-size: 18px;
+    font-size: 18px;
 }
 .card {
-  border: none;
+    border: none;
 }
 
-.compare .compare-items {
-  padding: 0 12%;
+.compare-body .compare-items {
+    padding: 0 12%;
 }
 .compare-content li {
-  font-size: 14px;
+    font-size: 14px;
 }
-.compare div .compare-link,
+.compare-body div .compare-link,
 .watchOS .watchOS-content a,
 footer .footer-list li a,
 footer .copy-right a {
-  text-decoration: none;
-  font-size: 20px;
+    text-decoration: none;
+    font-size: 20px;
 }
-.compare ul {
-  list-style-type: none;
-  color: #525252;
-  padding-left: 0;
+.compare-body ul {
+    list-style-type: none;
+    color: #525252;
+    padding-left: 0;
 }
-.compare ul li {
-  margin-bottom: 25px;
+.compare-body ul li {
+    min-height: 43px;
+    margin-bottom: 10px
 }
 .watchOS {
-  height: 80vh;
-  background-image: url("../img/tile_watchos__fo0tafi6nn6u_large.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+    height: 80vh;
+    background-image: url("../img/tile_watchos__fo0tafi6nn6u_large.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 .watchOS .watchOS-content {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 95%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+    text-align: center;
+    position: absolute;
+    bottom: -20px;
+    width: 95%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 .watch-band {
-  background-color: #fafafa;
+    background-color: #fafafa;
 }
 .watch-band .watch-band-img {
-  background-image: url("../img/watch-cto-bands__6iohybnbhk2i_large.jpg");
-  background-repeat: no-repeat;
-  background-position: left;
+    background-image: url("../img/watch-cto-bands__6iohybnbhk2i_large.jpg");
+    background-repeat: no-repeat;
+    background-position: left;
 }
 .watch-band .watch-band-img-bg {
-  background-position: center;
-  transition-property: background-position;
-  transition-duration: 2s;
+    background-position: center;
+    transition-property: background-position;
+    transition-duration: 2s;
 }
 
 footer {
-  background: #f4f5f7;
+    background: #f4f5f7;
 }
 footer .footer-list {
-  list-style-type: none;
-  padding-left: 0;
+    list-style-type: none;
+    padding-left: 0;
 }
 
 footer .footer-list li a {
-  color: #808080;
-  font-size: 12px;
+    color: #808080;
+    font-size: 12px;
 }
 .social-media-icon i {
-  margin-left: 10px;
+    margin-left: 10px;
 }
 footer .copy-right p,
 footer .copy-right a,
 footer .copy-right i {
-  color: #808080;
-  font-size: 14px;
+    color: #808080;
+    font-size: 14px;
 }
 
 @media only screen and (max-width: 1440px) {
-  .banner div {
-    left: 10%;
-  }
+    .banner div {
+        left: 10%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .compare-body .compare-items {
+    padding: 0 7%;
+}
+}
+
+@media only screen and (max-width: 850px) {
+    .compare-body .compare-items {
+    padding: 0;
+}
+.container.compare {
+        max-width: 100%;
+    }
 }
 
 @media only screen and (max-width: 768px) {
-  .navbar-collapse .navbar-nav {
-    align-items: start !important;
-  }
-  .navbar-collapse .navbar-nav .nav-item-desktop-icon {
-    display: none;
-  }
-  .banner {
-    height: unset;
-    background: none;
-    padding: 0;
-  }
-  .banner div {
-    display: none;
-  }
-  .banner-mobile {
-    display: block !important;
-  }
-  .compare .compare-items {
-    padding: 0;
-  }
+    .navbar-collapse .navbar-nav {
+        align-items: start !important;
+    }
+    .navbar-collapse .navbar-nav .nav-item-desktop-icon {
+        display: none;
+    }
+    .banner {
+        height: unset;
+        background: none;
+        padding: 0;
+    }
+    .banner div {
+        display: none;
+    }
+    .banner-mobile {
+        display: block !important;
+    }
+}
+
+
+.slick-slide>div {
+  transform: scale(.5);
+  transition: transform .3s cubic-bezier(.4, 0, .2, 1);
+}
+
+.slick-center>div {
+  transform: scale(1);
+}
+
+.slider__item>img {
+  width: 100%;
+  height: auto;
 }
