--- a/8-05mbeatzz/css/style.css
+++ b/8-05mbeatzz/css/style.css
@@ -278,7 +278,7 @@ header .navbar .cta-btn a:hover {
     transform: translate(-50%, -50%);
 }
 .player .track-thumbnail {
-    width: 20%;
+    width: 65px;
 }
 .player .track-thumbnail .play-icon {
     width: 30%;
@@ -294,13 +294,14 @@ header .navbar .cta-btn a:hover {
     font-size: 12px;
     color: #a3a7a9;
 }
-.player p .fas {
-    margin: 0 10px;
+.player button {
+    border: none;
+    background: none;
 }
-.player .controller p {
+.player .controller button {
     font-size: 32px;
 }
-.player .controller p:nth-child(2) {
+.player .controller button:nth-child(2) {
     font-size: 48px;
 }
 .player {
@@ -309,15 +310,94 @@ header .navbar .cta-btn a:hover {
 .player .progress-bar {
     width: 100%;
     height: 5px;
-    background: #0d43a8;
+    background: #d3d3d3;
     position: absolute;
     top: 0;
+    left: 0;
 }
-.player .volume p:nth-child(2) {
-    width: 100px;
+
+input[type="range"] {
+    margin: auto;
+    outline: none;
+    padding: 0;
+    width: 640px;
+    height: 2px;
+    background-color: #dedede;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ff1100), color-stop(100%, #ff1100));
+    background-size: 50% 100%;
+    background-repeat: no-repeat;
+    border-radius: 10px;
+    cursor: pointer;
+    -webkit-appearance: none;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    box-shadow: none;
+    border: none;
+    background: transparent;
+    -webkit-appearance: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    height: 18px;
+    width: 28px;
+    border: 0;
+    background: #fff;
+    border: 1px solid #777;
+    border-radius: 8px;
+    box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.1);
+    -webkit-appearance: none;
+}
+
+.player .progress-bar input {
+    -webkit-appearance: none;
+    width: 100%;
     height: 5px;
-    display: inline-block;
-    background-color: #000;
+    background-color: #dedede;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #0d43a8), color-stop(100%, #0d43a8));
+    outline: none;
+    border-radius: 0;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+}
+.player .progress-bar input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    background: #0d43a8;
+    border: none;
+    border-radius: 0;
+    cursor: pointer;
+}
+
+.player .volume p:nth-child(2) {
+    margin-bottom: 8px;
+}
+.player .volume p:nth-child(2) input {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    background-color: #dedede;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #000000), color-stop(100%, #000000));
+    outline: none;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+}
+.player .volume p:nth-child(2) input::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #000000;
+    border: none;
+    cursor: pointer;
+}
+.player .loop-shuffle button {
+    color: #d3d3d3;
+}
+.player .loop-shuffle button.active {
+    color: #000000 !important;
 }
 .track-list .track-thumbnail {
     width: 50px;
@@ -624,6 +704,24 @@ footer hr {
         padding: 15px 0;
         margin: 0 30%;
     }
+    .player .title {
+        width: 200px;
+        height: 25px;
+        overflow: hidden;
+        margin-top: 3px;
+    }
+    .player .subtitle {
+        width: 200px;
+    }
+    .player .volume p:nth-child(2) input {
+        width: 50px;
+    }
+    .player .controller button {
+        font-size: 24px;
+    }
+    .player .controller button:nth-child(2) {
+        font-size: 40px;
+    }
     .tracks-add-to-cart .tags {
         display: none;
     }
@@ -660,7 +758,29 @@ footer hr {
     .contact-us form .col-md-6:nth-child(2) {
         margin-top: 25px;
     }
+    .player .title {
+        width: 150px;
+    }
+    .player .subtitle {
+        display: none;
+    }
+    .player .loop-shuffle,
+    .player .volume {
+        display: none !important;
+    }
     .tracks-add-to-cart .modal-plan-list {
         margin-bottom: 10px;
+    }
+}
+@media only screen and (max-width: 320px) {
+    .player .title,
+    .player .subtitle {
+        width: 100px;
+    }
+    .player .controller button {
+        font-size: 16px;
+    }
+    .player .controller button:nth-child(2) {
+        font-size: 32px;
     }
 }
